--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vbs/fabric",
   "version": "1.0.0",
-  "description": "A collection of configuration files containing prettier, eslint, stylelint",
+  "description": "A rule library is used to manage the code writing specifications of team members.",
   "keywords": [
     "vbs",
     "vbs-plus",
@@ -37,8 +37,8 @@
     "prepublishOnly": "npm run build && npm test && np --no-cleanup --yolo --no-publish --any-branch",
     "prettier": "prettier -c --write \"**/*\"",
     "test": "npm run testTS && npm run testJS",
-    "testJS": "npm run build && cd jsExample && npm run lint",
-    "testTS": "npm run build && cd tsExample && npm run lint"
+    "testReactJS": "npm run build && cd examples/reactJsExample && npm run lint",
+    "testReactTS": "npm run build && cd examples/reactTsExample && npm run lint"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
