✨ feat: add vue example

--- a/examples/vueJsExample/package.json
+++ b/examples/vueJsExample/package.json
@@ -6,12 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "npm run lint:js && npm run lint:vue && npm run lint:style && npm run lint:prettier && npm run tsc",
+    "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js,.ts ",
-    "lint:fix": "eslint --fix --cache --ext .js,.ts --format=pretty ./src && npm run lint:style",
-    "lint:js": "eslint --cache --ext .js,.ts --format=pretty ./src/utils/filter.js",
-    "lint:vue": "eslint --cache --ext .vue --format=pretty ./src",
+    "lint:fix": "eslint --fix --cache --ext .js,.ts,.vue --format=pretty ./src && npm run lint:style",
+    "lint:js": "eslint --cache --ext .js,.ts,.vue --format=pretty ./src",
     "lint:prettier": "prettier -c --write \"src/**/*\" --end-of-line auto",
     "lint:style": "stylelint --fix \"src/**/*.less\" --custom-syntax postcss-less",
     "prettier": "prettier -c --write \"src/**/*\""
@@ -53,23 +52,26 @@
     "@ant-design/colors": "^3.2.1",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
     "@vue/cli-plugin-babel": "^4.0.4",
-    "@vue/cli-plugin-eslint": "^4.0.4",
+    "@vue/cli-plugin-eslint": "^4.5.15",
     "@vue/cli-plugin-router": "^4.0.4",
     "@vue/cli-plugin-unit-jest": "^4.0.4",
     "@vue/cli-plugin-vuex": "^4.0.4",
     "@vue/cli-service": "^4.0.4",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.12.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.8.0",
     "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.4.1",
     "file-loader": "^6.2.0",
     "git-revision-webpack-plugin": "^3.0.6",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "postcss-less": "^6.0.0",
+    "postcss-less": "6.0.0",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
     "stylelint": "^14.5.0",
