--- a/package.json
+++ b/package.json
@@ -51,15 +51,18 @@
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.9.0",
     "chalk": "^5.0.0",
+    "compare-versions": "^4.1.3",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-formatter-pretty": "^4.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-jest": "^26.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-unicorn": "^40.1.0",
+    "eslint-plugin-vue": "^8.4.1",
     "fast-glob": "^3.2.4",
     "os-locale": "^6.0.2",
     "prettier": "^2.3.2",
